# prog_paralela_mpi

./: CMakeLists.txt  main.cpp  matrices_mult.cpp  readme.txt
